--- a/index.html
+++ b/index.html
@@ -52,16 +52,17 @@
   <!-- First Parallax Image with Logo Text -->
   <div class="bgimg-1 w3-display-container w3-opacity-min">
     <div class="w3-display-middle" >
+      <h1><span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity"><span>DIGITAL </span><span>SUNSET </span><span>STUDIOS</span></h1>
       <!-- <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity" style="font-size:3vw !important"><span>DIGITAL </span><span>SUNSET </span><span>STUDIOS</span> -->
 
       <div class="flex-container">
         <div>
           <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL</span>
-          <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL</span>
-          <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL</span>
+          <!-- <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL</span>
+          <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">DIGITAL</span> -->
         </div>
         <div>
-          <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">SUNSET</span></span>
+          <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">SUNSET</span>
         </div>
         <div>
           <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">STUDIOS</span>
