--- a/education.html
+++ b/education.html
@@ -367,17 +367,17 @@
 
 
 
-    <!-- Cert Name here -->
+    <!-- Cert --- Android Basics Nanodegree by Google -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <h5>Unity Mini-Projects - C# Fundamentals</h5>
-        <h6>January 2023</h6>
+        <h5>Android Basics Nanodegree by Google</h5>
+        <h6>July 2017</h6>
         <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
       </div>
     </div>
