--- a/education.html
+++ b/education.html
@@ -260,7 +260,15 @@
       <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h5>Unity Mini-Projects - C# Fundamentals</h5>
         <h6>January 2023</h6>
-        <p>Explanation of certificate -  blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+        <ul>
+          <li>Build simple user interfaces</li>
+          <li>Deal with different user inputs</li>
+          <li>Detect collisions between objects</li>
+          <li>Access object data through scripting</li>
+          <li>Apply physics to objects</li>
+        </ul>
+        <a href="https://academy.zenva.com/product/minigame-projects-explore-game-development-c/" target=”_blank”>Link To Learn the Zenva Course Site</a>
+      </div>
       </div>
     </div>
     <br>
